--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -25,7 +25,11 @@
       "title": "My Account",
       "details": "Account Details",
       "view_addresses": "View Addresses",
-      "return": "Return to Account Details"
+      "return": "Return to Account Details",
+      "message": "Here you will find the details of your orders, your deposited addresses and further information. We hope you enjoy or online showroom!",
+      "no_unlocks": "You are not unlocked for any Designer, please ask the site operator",
+      "unlocked_title": "My unlocked Designers",
+      "locked_title": "Also interesting designers for you?"
     },
     "activate_account": {
       "title": "Activate Account",
