--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -138,6 +138,7 @@
   "cart": {
     "general": {
       "add_to_cart": "Add to cart",
+      "update_cart": "Update cart",
       "pre_order": "Pre order",
       "can_not_add_to_cart": "Can not add to cart",
       "empty": "Your cart is currently empty.",
