--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -144,8 +144,9 @@
       "empty": "Your cart is currently empty.",
       "empty_message": "Sie können auf den Produktseiten die Produkte zu Ihrem Warenkorb hinzufügen.",
       "savings_html": "You're saving {{ price }}",
-      "added": "Product \"{{ title }}\" added to cart",
-      "removed": "Product \"{{ title }}\" removed from cart",
+      "added": "Product added to cart",
+      "removed": "Product(s) removed from cart",
+      "updated": "Cart updated",
       "subtotal": "Subtotal",
       "shipping_at_checkout": "Shipping & taxes calculated at checkout",
       "checkout": "Order now",
