--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -128,6 +128,7 @@
       "savings_html": "Du sparst {{ price }}",
       "added": "Artikel \"{{ title }}\" zum Warenkorb hinzugefügt",
       "removed": "Artikel \"{{ title }}\" aus Warenkorb entfernt",
+      "updated": "{{ count }} Produkte im Warenkorb aktualisiert",
       "subtotal": "Zwischensumme",
       "shipping_at_checkout": "Liefer- und Preisnachlässe werden an der Kasse generiert.",
       "checkout": "Zur Kasse",
