custom styles for legal texts, fix account history

--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -201,5 +201,8 @@
       "send": "Send",
       "post_success": "Message sent successfully"
     }
+  },
+  "date_formats": {
+    "month_day_year": "%B %d, %Y"
   }
 }
