[Component:ShopifyAddresses] Working form custom round checkbox style

--- a/theme/locales/de.json
+++ b/theme/locales/de.json
@@ -39,6 +39,7 @@
       "set_default": "Als Standard-Adresse festlegen",
       "add": "Adresse hinzufügen",
       "edit": "Bearbeiten",
+      "update": "Aktualisieren",
       "delete": "Löschen"
     }
   }
