--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -27,6 +27,22 @@
       "edit": "Edit",
       "update": "Update",
       "delete": "Delete"
+    },
+    "reset_password": {
+      "title": "Reset account password",
+      "subtext": "Enter a new password for {{ email }}",
+      "password": "Password",
+      "password_confirm": "Confirm Password",
+      "submit": "Reset Password"
+    },
+
+    "activate_account": {
+      "title": "Activate Account",
+      "subtext": "Create your password to activate your account.",
+      "password": "Password",
+      "password_confirm": "Confirm Password",
+      "submit": "Activate Account",
+      "cancel": "Decline Invitation"
     }
   }
 }
