--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -7,6 +7,11 @@
   "date_formats": {
     "month_day_year": "%B %d, %Y"
   },
+  "snippets": {
+    "jumplink-pagination": {
+      "load_more": "Load more"
+    }
+  },
   "customer": {
     "addresses": {
       "title": "Your Addresses",
