--- a/theme/locales/en.default.json
+++ b/theme/locales/en.default.json
@@ -49,5 +49,28 @@
       "submit": "Activate Account",
       "cancel": "Decline Invitation"
     }
+  },
+  "legals": {
+    "privacy_policy": {
+      "checkbox_label_html": "By signing up I agree to the <a href=\"/pages/legal-area\">Privacy Statement</a>"
+    }
+  },
+  "blogs": {
+    "comments": {
+      "title": "Any thoughts? Feel free to share and comment.",
+      "name": "Name*",
+      "email": "Email*",
+      "message": "Comment*",
+      "post": "Post comment",
+      "moderated": "Please note, comments must be approved before they are published.",
+      "required": "The fields marked with * are required.",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "success": "Your comment was posted successfully! Thank you!",
+      "unapproved": "(unapproved)",
+      "with_count": {
+        "one": "{{ count }} Comment",
+        "other": "{{ count }} Comments"
+      }
+    }
   }
 }
